--- a/_config.yml
+++ b/_config.yml
@@ -1,14 +1,14 @@
 # Site settings
-title: Your awesome title
-email: your-email@domain.com
+title: iWalk's Blog 
+email: judi0713@sina.com
 description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  我是新手程序员，想找一个地方记录自己在技术上的成长和生活上的点滴。
+  现在主要是跟随迪哥做iOS的开发。
+  寒假想看一些前端的知识。
+  我的jekyll还在搭建过程当中！我会逐渐将我的jekyll美化起来的。
 baseurl: "" # the subpath of your site, e.g. /blog/
 url: "http://yourdomain.com" # the base hostname & protocol for your site
-twitter_username: jekyllrb
-github_username:  jekyll
+github_username: judi0713 
 
 # Build settings
 markdown: kramdown
