--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ description: > # this means to ignore newlines until "baseurl:"
   寒假想看一些前端的知识。
   我的jekyll还在搭建过程当中！我会逐渐将我的jekyll美化起来的。
 baseurl: "" # the subpath of your site, e.g. /blog/
-url: "http://yourdomain.com" # the base hostname & protocol for your site
+url: "judi0713.github.io" # the base hostname & protocol for your site
 github_username: judi0713 
 
 # Build settings
