--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: iWalk's Blog 
+title: testHs
 email: judi0713@sina.com
 description: > # this means to ignore newlines until "baseurl:"
   我是新手程序员，想找一个地方记录自己在技术上的成长和生活上的点滴。
