--- a/images/mianliao.conf
+++ b/images/mianliao.conf
@@ -5,7 +5,7 @@ dns-server = 119.29.29.29, 223.5.5.5, 114.114.114.114
 loglevel = notify
 
 [Proxy]
-Proxy = custom,198.199.94.85,443,aes-256-cfb,j,http://surge.pm/ss.module
+Proxy = custom,198.199.94.85,443,aes-256-cfb,j,http://walkginkgo.com/images/ss.module
 
 [Rule]
 GEOIP,CN,Proxy
