--- a/images/rocketad.conf
+++ b/images/rocketad.conf
@@ -1828,5 +1828,27 @@ IP-CIDR,10.0.0.0/8,DIRECT
 IP-CIDR,127.0.0.0/8,DIRECT
 IP-CIDR,172.16.0.0/12,DIRECT
 IP-CIDR,192.168.0.0/16,DIRECT
+IP-CIDR,123.125.117.0/22,REJECT,no-resolve
+IP-CIDR,101.227.199.73/22,REJECT,no-resolve
+IP-CIDR,221.179.140.145/32,REJECT,no-resolve
+IP-CIDR,114.247.28.96/32,REJECT,no-resolve
+IP-CIDR,220.196.52.141/32,REJECT,no-resolve
+IP-CIDR,221.228.17.152/32,REJECT,no-resolve
+IP-CIDR,111.175.220.160/29,REJECT,no-resolve
+IP-CIDR,113.57.230.88/32,REJECT,no-resolve
+IP-CIDR,124.160.194.11/32,REJECT,no-resolve
+IP-CIDR,61.160.200.252/32,REJECT,no-resolve
+IP-CIDR,123.125.117.0/22,REJECT,no-resolve
+IP-CIDR,101.227.199.73/22,REJECT,no-resolve
+IP-CIDR,101.227.199.63/22,REJECT,no-resolve
+IP-CIDR,101.227.199.64/22,REJECT,no-resolve
+IP-CIDR,101.227.200.11/22,REJECT,no-resolve
+IP-CIDR,58.220.50.158/22,REJECT,no-resolve
+IP-CIDR,58.220.42.6/22,REJECT,no-resolve
+IP-CIDR,58.215.126.48/22,REJECT,no-resolve
+IP-CIDR,122.226.122.227/22,REJECT,no-resolve
+IP-CIDR,61.155.128.13/22,REJECT,no-resolve
+IP-CIDR,183.136.156.32/22,REJECT,no-resolve
+IP-CIDR,101.227.14.86/22,REJECT,no-resolve
 GEOIP,CN,DIRECT
 FINAL,DIRECT
