--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
 title: testHs
-email: judi0713@sina.com
+email: judi0713@foxmail.com
 description: > # this means to ignore newlines until "baseurl:"
   我想回馈iOS开发这个大社区，所以我决定写博客。
   写的不好，还请见谅。
